# Ellie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Mesh_data/: README.md  mesh2D.geo  mesh2D_refine.geo  mesh3D.geo  square.geo
Test/: test_2d_1o.cpp  test_2d_2o.cpp  test_2d_3o.cpp  test_3d_1o.cpp  test_3d_2o.cpp
src/DerivatePolynom/: DerivatePolynom.cpp  DerivatePolynom.h
src/Determinant/: BijectionElements.h  JacobianMatrix.h
src/EvaluationPolynom/: EvaluationPolynom.h
src/Factory/: DerivatePolynomFactory.h  PolynomFactory.h
src/Field/: Field.cpp  Field.h
src/GaussPoints/: GaussPointsFactory.h
src/Laplacian/: Laplacian.cpp  Laplacian.h  lap.h
src/Mesh/: Dimensions.h  DirichletConditions.h  Element.cpp  Element.h  Internal.cpp  Internal.h  Mesh.cpp  Mesh.h  NeumannConditions.cpp  NeumannConditions.h  Node.h  Partition.cpp  Partition.h  PhysicalNames.h
src/Mesh/Dimensions/: Dimensions.cpp  Dimensions.h
src/Mesh/DirichletConditions/: DirichletConditions.cpp  DirichletConditions.h
src/Mesh/Internal/: Internal.cpp  Internal.h
src/Mesh/Mesh/: Mesh.h
src/Mesh/NeumannConditions/: NeumannConditions.cpp  NeumannConditions.h
src/Mesh/Node/: Node.cpp
src/Mesh/Partition/: Partition.h
src/Mesh/PhysicalNames/: PhysicalNames.cpp  PhysicalNames.h
src/Polynom/: FirstDegreePolynom.cpp  FirstDegreePolynom.h  Polynom.cpp  Polynom.h
src/Weight/: WeightFactory.h
